<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.garethlye.fyreandruination.Character_Creation_3"/>
    </data>
<RelativeLayout
    android:id="@+id/activity_character__creation_3"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.garethlye.fyreandruination.Character_Creation_3">

    <TextView
        android:id="@+id/adventureAttributes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/adventureAttributes"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/adventureAttributes"
        android:id="@+id/border"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/strengthText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/strengthText"
        android:layout_marginTop="25dp"
        android:layout_below="@id/border"/>

    <TextView
        android:id="@+id/agilityText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/agilityText"
        android:layout_marginTop="25dp"
        android:layout_below="@id/strengthText"/>

    <TextView
        android:id="@+id/dexterityText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dexterityText"
        android:layout_marginTop="25dp"
        android:layout_below="@id/agilityText"/>

    <TextView
        android:id="@+id/wisdomText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/wisdomText"
        android:layout_marginTop="25dp"
        android:layout_below="@id/dexterityText"/>

    <TextView
        android:id="@+id/charismaText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/charismaText"
        android:layout_marginTop="25dp"
        android:layout_below="@id/wisdomText"/>

    <TextView
        android:id="@+id/constitutionText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/constitutionText"
        android:layout_marginTop="25dp"
        android:layout_below="@id/charismaText"/>

    <SeekBar
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/strengthText"
        android:layout_alignStart="@+id/adventureAttributes"
        android:layout_marginStart="30dp"
        android:background="#3f3f3f"
        android:id="@+id/strengthSeekBar"/>

    <SeekBar
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/agilityText"
        android:layout_alignStart="@+id/adventureAttributes"
        android:layout_marginStart="30dp"
        android:background="#3f3f3f"
        android:id="@+id/agilitySeekBar"/>

    <SeekBar
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dexterityText"
        android:layout_alignStart="@+id/adventureAttributes"
        android:layout_marginStart="30dp"
        android:background="#3f3f3f"
        android:id="@+id/dexteritySeekBar"/>

    <SeekBar
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wisdomText"
        android:layout_alignStart="@+id/adventureAttributes"
        android:layout_marginStart="30dp"
        android:background="#3f3f3f"
        android:id="@+id/wisdomSeekBar"/>

    <SeekBar
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/charismaText"
        android:layout_alignStart="@+id/adventureAttributes"
        android:layout_marginStart="30dp"
        android:background="#3f3f3f"
        android:id="@+id/charismaSeekBar"/>

    <SeekBar
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/constitutionText"
        android:layout_alignStart="@+id/adventureAttributes"
        android:layout_marginStart="30dp"
        android:background="#3f3f3f"
        android:id="@+id/constitutionSeekBar"/>

    <TextView
        android:text="0"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:layout_alignTop="@+id/strengthSeekBar"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/strengthSeekBar"
        android:background="#3f3f3f"
        android:id="@+id/strengthValue"/>

    <TextView
        android:text="0"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:layout_alignTop="@+id/agilitySeekBar"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/agilitySeekBar"
        android:background="#3f3f3f"
        android:id="@+id/agilityValue"/>

    <TextView
        android:text="0"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:layout_alignTop="@+id/dexteritySeekBar"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/dexteritySeekBar"
        android:background="#3f3f3f"
        android:id="@+id/dexterityValue"/>

    <TextView
        android:text="0"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:layout_alignTop="@+id/wisdomSeekBar"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/wisdomSeekBar"
        android:background="#3f3f3f"
        android:id="@+id/wisdomValue"/>

    <TextView
        android:text="0"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:layout_alignTop="@+id/charismaSeekBar"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/charismaSeekBar"
        android:background="#3f3f3f"
        android:id="@+id/charismaValue"/>

    <TextView
        android:text="0"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:layout_alignTop="@+id/constitutionSeekBar"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/constitutionSeekBar"
        android:background="#3f3f3f"
        android:id="@+id/constitutionValue"/>

    <TextView
        android:text="@{viewModel.totalValue}"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:background="#3f3f3f"
        android:id="@+id/totalValueTextView"
        android:layout_below="@+id/constitutionValue"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:text="@string/maxAttrReached"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:visibility="invisible"
        android:textSize="20sp"
        android:layout_alignTop="@+id/totalValueTextView"
        android:layout_alignEnd="@+id/adventureAttributes"
        android:textColor="#ff0000"
        android:id="@+id/maxValueReachedTextView"/>

    <TextView
        android:text="@string/attributeDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maxValueReachedTextView"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:layout_marginTop="11dp"
        android:id="@+id/attributeDescriptionTitle"/>

    <TextView
        android:text="@string/attributeDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/attributeDescriptionTitle"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:id="@+id/attributeDescription"
        android:background="#3f3f3f"/>

    <Button
        android:text="@string/confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attributeDescription"
        android:layout_centerHorizontal="true"
        android:id="@+id/characterCreation3ContinueBtn"/>

</RelativeLayout>
</layout>