<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.garethlye.fyreandruination.Character_Creation_2"/>
    </data>

    <RelativeLayout
        android:id="@+id/activity_character__creation_2"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.garethlye.fyreandruination.Character_Creation_2">

        <TextView
            android:id="@+id/chooseYourClassText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/chooseYourClass"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/classesSpinner"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@+id/chooseYourClassText"
            android:layout_marginTop="10dp"
            android:background="#404040"/>

        <TextView
            android:id="@+id/showClassDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/classesSpinner"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/showClassDescription"/>

        <TextView
            android:id="@+id/classDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/showClassDescriptionText"
            android:layout_marginTop="10dp"
            android:background="#404040"
            android:paddingBottom="5dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="5dp"
            android:text="@{viewModel.classDescription}"
            android:textColor="#FFFFFF"
            android:scrollbars = "vertical"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/showRaceDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/classDescription"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/chooseYourRace"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/racesSpinner"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@+id/showRaceDescriptionText"
            android:layout_marginTop="10dp"
            android:background="#404040"/>

        <TextView
            android:id="@+id/showRaceDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/racesSpinner"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/showRaceDescription"/>

        <TextView
            android:id="@+id/raceDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/showRaceDescription"
            android:layout_marginTop="10dp"
            android:background="#404040"
            android:paddingBottom="5dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="5dp"
            android:text="@{viewModel.raceDescription}"
            android:textColor="#FFFFFF"
            android:scrollbars = "vertical"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/chooseSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/raceDescription"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/chooseYourSex"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/sexSpinner"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@+id/chooseSex"
            android:layout_marginTop="10dp"
            android:background="#404040"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel::onContinueClicked}"
            android:text="@string/continueBtn"
            android:layout_below="@id/sexSpinner"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"/>

    </RelativeLayout>
</layout>