<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.garethlye.fyreandruination.MainMenu"/>
    </data>

    <RelativeLayout
        android:id="@+id/activity_main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.garethlye.fyreandruination.MainMenu">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="false">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/backgroundGifView"
                android:layout_width="2000dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/mainmenu_background"/>
        </LinearLayout>

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:text="@string/mainMenuTitle"
            android:textColor="#A0522D"
            android:textSize="50sp"/>

        <LinearLayout
            android:id="@+id/buttonLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="350dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="13dp"
                android:text="@string/mainMenu_continueGame"
                android:textColor="#4682B4"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="onNewGameClicked"
                android:padding="13dp"
                android:text="@string/mainMenu_newGame"
                android:textColor="#4682B4"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="13dp"
                android:text="@string/mainMenu_LoadGame"
                android:textColor="#4682B4"
                android:textSize="17sp"/>

        </LinearLayout>
    </RelativeLayout>
</layout>
